Attempting to fix android bug where text wraps to new line.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -73,6 +73,10 @@
 
 /* Global */
 
+body {
+    text-rendering: initial;
+}
+
 &:hover {
     transition: background-color 0.5s ease;
 }
